Tooltip working More: Custom message needs to be accessed Bug: z-index needs to be fixed

--- a/src/iframe/css/IframeStyle.css
+++ b/src/iframe/css/IframeStyle.css
@@ -248,11 +248,14 @@ body {
     will-change: auto !important;
 }
 
-
 .tool-tip {
     cursor: pointer;
     height: 18px;
     width: 18px;
     float: right;
     margin-top: 20px;
+}
+
+.tooltip {
+    position: fixed;
 }
